--- a/TeamApex/src/main/resources/application.properties
+++ b/TeamApex/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=TeamApex
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/citizendb
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
