--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.password=
 #Hibernate Configiration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.showsql=true
+
+
+spring.servlet.multipart.max-file-size=10MB
+
+spring.servlet.multipart.max-request-size=10MB
